Fix font size so that it displays clearly on smaller screen sizes.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,6 @@
 }
 
 body {
-    /*margin-top: 100px;*/
     margin-bottom: auto;
     margin-left: auto;
     margin-right: auto;
@@ -27,7 +26,7 @@ h1, h2, h3 {
     padding-bottom: 10px;
     font-family: volkhov, sans-serif;
     text-transform: uppercase;
-    font-size: 2.5vw;
+    font-size: 2rem;
     color: #E96E14;
 }
 
@@ -85,6 +84,10 @@ h3 {
 
 /* history */
 
+p {
+    font-size: 1rem;
+}
+
 #history {
     max-width: 1200px;
     width: 100%;
@@ -96,7 +99,6 @@ h3 {
     margin-top: 4px;
     margin-bottom: 5px;
     padding: 4px;
-    font-size: 1.5vw;
 }
 
 #about-history {
@@ -232,7 +234,7 @@ img {
     padding-top: 10px;
     padding-bottom: 10px;
     font-family: volkhov, sans-serif;
-    font-size: 1.5vw;
+    font-size: 1rem;
 }
 
   /* footer */
@@ -269,7 +271,6 @@ footer {
 
 #visitor-information p {
     padding: 10px;
-    font-size: 1.5vw;
     line-height: 1.5;
     text-align: justify;
 }
@@ -310,7 +311,6 @@ footer {
     padding-top: 30px;
     padding-bottom: 30px;
 }
-
 
 .left-visit {
     margin-left: 10px;
@@ -372,8 +372,7 @@ footer {
 
 #contact p {
     padding: 4px;
-    font-size: 1vw;
-    line-height: 0.5;
+    line-height: 1.5;
 }
 
 #contact-form {
@@ -394,14 +393,14 @@ footer {
 }
 
 #contact-us p {
-    font-size: 1.5vw;
+    font-size: 1rem;
 }
 
    /* Form */
 
 label {
     display: inline-block;
-    font-size: 1vw;
+    font-size: 1rem;
     padding: 10px;
 }
 
@@ -430,7 +429,7 @@ label {
     background: #F5F5DC;
     font-family: volkhov, sans-serif;
     color: #3a3a3a;
-    font-size: 1vw;
+    font-size: 1rem;
 }
 
 .text-input:hover {
@@ -444,7 +443,7 @@ label {
     padding: 10px;
     background-color: #E96E14;
     text-align: center;
-    font-size: 1vw;
+    font-size: 1rem;
     max-width: 25%;
     height: 25%;
     font-family: volkhov, sans-serif;
@@ -478,6 +477,10 @@ label {
 /* For medium screen sizes from 768px wide */
 @media screen and (max-width: 768px) {
 
+    h1, h2, h3 {
+        font-size: 1.75rem;
+    }
+
     #menu {
         float: left;
         clear: left;
@@ -495,8 +498,24 @@ label {
         background: url('../images/columns_300x300.jpg') no-repeat center center;
     }
 
+    #top {
+        font-size: 1.75rem;
+    }
+
     .river-port, .forum, .market {
         background: none;
+    }
+
+    label {
+        font-size: 1.75rem;
+    }
+    
+    .text-input {
+        font-size: 1.75rem;
+    }
+    
+    .send {
+        font-size: 1.75rem;
     }
 
 }
@@ -504,8 +523,12 @@ label {
 /* For small screen sizes below 499px width */
 @media screen and (max-width: 499px) {
 
-    h2 {
-        font-size: 0.7em;
+    h1, h2, h3 {
+        font-size: 1rem + 1vw;
+    }
+
+    p {
+        font-size: calc(1rem + 1vw);
     }
 
     #menu {
@@ -535,7 +558,6 @@ label {
     }
 
     .timeline h2 {
-        font-size: 0.5em;
         text-align: center;
     }
 
@@ -543,27 +565,34 @@ label {
         margin-top: 4px;
         margin-bottom: 5px;
         padding: 4px;
-        font-size: 0.5em;
     }
 
     #what-to-see p {
-        font-size: 0.6em;
         line-height: 1.5;
     }
 
-    .forum h3, .market h3, .river-port h3 {
+    /*.forum h3, .market h3, .river-port h3 {
         padding-top: 4px;
         padding-bottom: 10px;
         font-size: 0.7em;
-    }
+    }*/
 
     #top {
-        clear: both;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        font-family: volkhov, sans-serif;
-        font-size: 0.7em;
+        font-size: 1rem + 1vw;
     }
+
+    label {
+        font-size: 1rem + 1vw;
+    }
+    
+    .text-input {
+        font-size: 1rem + 1vw;
+    }
+    
+    .send {
+        font-size: 1rem + 1vw;
+    }
+
 
 }
 
@@ -580,6 +609,5 @@ label {
 
     #logo {
         font-size: 7vw;
-
+    }
 }
-*/
